--- a/hw/mole/index.html
+++ b/hw/mole/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 <body>
 <div id="game">
 
-    <header><img src="./header.png"></header>
+    <header><img src="./header.png" alt="hi"></header>
 
     <div id="hud">
         <div id="time">20</div>
@@ -27,8 +27,7 @@
     </div>
 
 </div>
-<script src="mole_ui.js"/>
-<script src="mole_script.js"/>
+<script src="mole_ui.js"></script>
 </body>
 
 </html>
