--- a/hw/day6/todolist/index.html
+++ b/hw/day6/todolist/index.html
@@ -30,7 +30,7 @@
                 <a href="#/completed">Completed</a>
             </li>
         </ul>
-        <button id="clear-done" class="clear-completed">Clear completed</button>
+<!--        <button id="clear-done" class="clear-completed">Clear completed</button>-->
     </footer>
 </section>
 <script src="todo_list.js"></script>
